--- a/src/app/page/tareas/tareas.page.html
+++ b/src/app/page/tareas/tareas.page.html
@@ -32,7 +32,7 @@
             </ion-item-option>
           </ion-item-options>
 
-          <ion-item-options side="start" (ionSwipe)="goReceiver(item)">
+          <ion-item-options side="start" (ionSwipe)="goReceiver(i)">
             <ion-item-option expandable color="success">
               <ion-icon name="checkbox-outline"></ion-icon>
             </ion-item-option>
