--- a/src/app/page/completados/completados.page.html
+++ b/src/app/page/completados/completados.page.html
@@ -6,10 +6,20 @@
 
 <ion-content>
   <ion-row>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label>{{user| json}} </ion-label>
-      </ion-item>
-    </ion-item-sliding>
+    <ion-col>
+      <ion-list>
+        <ion-item-sliding *ngFor="let item of tasksModel; let i=index">
+          <ion-item>
+            <ion-label> {{item}} </ion-label>
+          </ion-item>
+
+          <ion-item-options side="end" (ionSwipe)="removeTaskComplete(i)">
+            <ion-item-option expandable color="danger">
+              <ion-icon name="trash-outline"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
+    </ion-col>
   </ion-row>
 </ion-content>
