--- a/src/app/page/tab-inicial/tab-inicial.page.html
+++ b/src/app/page/tab-inicial/tab-inicial.page.html
@@ -7,7 +7,7 @@
       <ion-label>Lista de Tareas</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="completado">
+    <ion-tab-button tab="completados">
       <ion-icon name="list-outline"></ion-icon>
       <ion-label>Tareas Completadas</ion-label>
     </ion-tab-button>
