--- a/src/app/page/tareas/tareas.page.html
+++ b/src/app/page/tareas/tareas.page.html
@@ -26,13 +26,13 @@
             <ion-label> {{item}} </ion-label>
           </ion-item>
 
-          <ion-item-options side="end" (ionSwipe)="removeTask(i)">
+          <ion-item-options side="end" (ionSwipe)="removeTask(i) ">
             <ion-item-option expandable color="danger">
               <ion-icon name="trash-outline"></ion-icon>
             </ion-item-option>
           </ion-item-options>
 
-          <ion-item-options side="start" (ionSwipe)="goReceiver(i)">
+          <ion-item-options side="start" (ionSwipe)="goReceiver(item,i)">
             <ion-item-option expandable color="success">
               <ion-icon name="checkbox-outline"></ion-icon>
             </ion-item-option>
